--- a/src/routes/static/speedtest.html
+++ b/src/routes/static/speedtest.html
@@ -1,6 +1,14 @@
 <!DOCTYPE html>
 <html>
-    <body style="background-color: #0d0d0d">
-        <iframe width="100%" height="650px" frameborder="0" src="http://crazy2g.speedtestcustom.com"></iframe>
-    </body>
+	<head>
+		<!-- You should add the following <meta> viewport element to support responsive device scaling -->
+		<meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1.0 maximum-scale=1.0" />
+		<title>Speedtest - api.c2g.space</title>
+	</head>
+	<!-- Any wrapping containers around the iframe need to have width and height set to `100%` for a responsive iframe experience -->
+	<body style="width: 100%; height: 100%; background-color: #0d0d0d;">
+		<!-- Replace the "src" property with your custom Test URL -->
+		<!--"your-company-name" is set up in your online configuration dashboard -->
+		<iframe width="100%" height="600px" frameborder="0" src="https://crazy2g.speedtestcustom.com"></iframe>
+	</body>
 </html>
